# photorealistic-mapping

./: .gitignore  .gitmodules  MAPPING_API_README.md  README.md  iliana-params.txt  mapping_api.py  vizualize_costmap.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/livox_ros_driver2/share/livox_ros_driver2/: local_setup.sh  package.sh
log/: latest_build  latest_list
rtbamap_db_viewer_params/: rtabmap_export_outside_settings.ini  rtabmap_export_outside_settings_color.ini  rtabmap_export_settings.ini
scripts/: livox_forwarder.service  mapping_api.py  rove_mapping_api.service  rove_mapping_launch.service  update_scripts.sh
scripts/livox_forwarder/: livox_forwarder.cpp
src/LIO-SAM/config/: params.yaml  rviz2.rviz
src/lio_sam_wrapper/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/lio_sam_wrapper/launch/: run.launch.py  vectornav.launch.py
src/lio_sam_wrapper/lio_sam_wrapper/: imu_wrapper.py  lidar_wrapper.py
src/livox_ros_driver2/config/: MID360_config.json
src/livox_ros_driver2/msg/: CustomPoint.msg
src/livox_ros_driver2/src/: lddc.cpp
src/ros2_camera_publish/rosbag2_2025_10_18-21_57_52/: metadata.yaml
src/rove_color_mapping/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/rove_color_mapping/config/: base.rviz  camera_info.yaml  camera_info_cam_east.yaml  camera_info_cam_north.yaml  camera_info_cam_south.yaml  camera_info_cam_west.yaml  front_camera.yaml  gscam.yaml  gscam_jetson.yaml  gscam_test.yaml  nav2_costmap.yaml  test_rig.rviz
src/rove_color_mapping/launch/: gscam.launch.py  lidar3d.launch.py  localmap.launch.py  nav.launch.py  rosbag.launch.py  rtabmap.launch.py  run.launch.py  vectornav.launch.py
src/rove_color_mapping/rove_color_mapping/: fisheye_rectify.py  imu_wrapper.py  lidar_merger.py  local_map_node.py
src/rove_color_mapping/urdf/: sensor_mount.urdf.xacro
src/rove_description/launch/: launch.py
src/rove_description/rviz/: conf.rviz
src/rove_description/urdf/: README_rove_standard.md  flipper.urdf.xacro  livox.urdf.xacro  rove_standard.metadata.yaml  rove_standard.urdf  sensor.urdf.xacro
src/rove_lidar_merger/: CMakeLists.txt  package.xml
src/rove_lidar_merger/src/: lidar_merger.cpp
src/rove_rtabmap_tuner/: BRANCH_NOTES.md  README.md  TUNING_PLAYBOOK.md  package.xml  setup.cfg  setup.py
src/rove_rtabmap_tuner/experiments/: baseline_367_7bag_5rep.md  capra_focused_v3_winner_5rep.md  capra_mo_v1_pareto.md  capra_mo_v1_t9_5rep.md  capra_near_18_v1_t6_5rep.md  capra_near_18_v1_t6_correction_10rep.md  capra_near_22_v1_negative.md  capra_near_22_v2_t8_5rep.md  capra_near_22_v2_t9_5rep.md  capra_q90_v1_t6_5rep.md  capra_turning_v1_t4_5rep.md  capra_wide_v1_t13_5rep.md  focused_run_partial_results.md  force_3dof_ab.md  icp_force_dof_smokes.md  mo_icpratio_pareto_findings.md  moving_extra_long_bag4_failure_cause.md  near_18_t10_5rep.md  near_22_t18_5rep.md  nondeterminism_3rep.md  per_bag_winners_capra_full_v1.md  study_full_trial_349_5rep.md  trial_22_5rep.md  trial_22_second_5rep.md  trial_367_validation_3rep.md  trial_6_variant_kf075_10rep.md  trial_6_variant_kf075_8bag_5rep.md
src/rove_rtabmap_tuner/rove_rtabmap_tuner/: analyze_per_bag.py  optimizer.py  scoring.py  template_renderer.py  trial_runner.py
src/rove_rtabmap_tuner/rove_rtabmap_tuner/templates/: lidar3d_tunable.launch.py.tmpl
src/rove_rtabmap_tuner/tests/: test_aggregators.py
src/rove_sim_webots/: README.md  package.xml  setup.cfg  setup.py
src/rove_sim_webots/config/trajectories/: auto_indoor_office.yaml  auto_indoor_structured.yaml  auto_indoor_warehouse.yaml  auto_mixed.yaml  auto_outdoor_rocky.yaml  auto_outdoor_terrain.yaml  auto_outdoor_urban.yaml  figure_eight.yaml  indoor_corridor.yaml  outdoor_loop1.yaml  slow_short.yaml
src/rove_sim_webots/launch/: rtabmap_lidar3d.launch.py  sim.launch.py  sim_with_rtabmap.launch.py
src/rove_sim_webots/protos/: Rove.proto
src/rove_sim_webots/rove_sim_webots/: auto_trajectory.py  map_validator.py  parallel_verify.py  rove_driver.py  scripted_runner.py  stability_sweep.py  trajectories.py  validator.py  verify_trajectory.py  waypoint_driver.py
src/rove_sim_webots/scripts/: livox_merger.py
src/rove_sim_webots/urdf/: rove_webots.urdf
src/rove_sim_webots/worlds/: generate_outdoor_rocky.py  indoor_office.wbt  indoor_structured.wbt  indoor_warehouse.wbt  mixed.wbt  outdoor_rocky.wbt  outdoor_terrain.wbt  outdoor_urban.wbt
src/rove_slam_ros/: .gitignore  CAMERA_CALIBRATION.md  CMakeLists.txt  NAV_TESTING.md  README.md  SIM_NAV_TESTING.md  SIM_SLAM_ACCURACY.md  package.xml
src/rove_slam_ros/config/: cam_intrinsics.yaml  cam_intrinsics_sim.yaml  nav2_costmap.yaml  nav2_full.yaml  rove_slam.rviz  slam.yaml
src/rove_slam_ros/launch/: bag_nav.launch.py  bag_nav_bringup.launch.py  bag_replay.launch.py  bringup.launch.py  nav.launch.py  nav_bringup.launch.py  nvblox.launch.py  slam.launch.py  slam_nav.launch.py  slam_navfull.launch.py
src/rove_slam_ros/scripts/: calibrate_camera.py  color_mesh.py  mesh_builder.py  rerun_live.py  sim_slam_accuracy.py  wait_for_nav.py
src/rove_slam_ros/src/: rove_slam_node.cpp
src/rove_slam_ros/test/: headless_nav_smoke.sh  nav_goal.sh  sim_nav_correlate.sh  sim_slam_accuracy.sh  sim_slam_record.sh  sim_slam_replay.sh  smoke.sh
src/rove_tuning_orchestrator/: README.md  package.xml  setup.cfg  setup.py
src/rove_tuning_orchestrator/config/search_spaces/: stage_a_icp_core.yaml  stage_b_icp_corresp.yaml  stage_c_odom_filter.yaml  stage_d_loop_closure.yaml  stage_e_joint_refine.yaml
src/rove_tuning_orchestrator/rove_tuning_orchestrator/: dashboard.py  orchestrator.py  parallel_tune.py  promote.py  reference_compare.py  search_spaces.py  storage.py  worker.py
src/rove_tuning_orchestrator/rove_tuning_orchestrator/evaluators/: __init__.py  base.py  real.py  sim.py  sim_bag.py
src/rove_tuning_orchestrator/scripts/: deploy_worker.sh
src/vectornav_udp_bridge/: package.xml  setup.cfg  setup.py
src/vectornav_udp_bridge/launch/: run.launch.py
src/vectornav_udp_bridge/vectornav_udp_bridge/: vectornav_udp_node.py
(+9 files in other folders)
