<?xml version="1.0"?>
<package format="3">
  <name>rove_color_mapping</name>
  <version>0.0.1</version>
  <description>Creates a wrapper node to translate lidar + imu data into the correct format for lio_sam</description>

  <maintainer email="capra@ens.etsmtl.ca">Nathan Gueissaz-Teufel</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>rtabmap_ros</depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
